# mijkplayer-master

./: README.md  build.gradle  settings.gradle
common/: build.gradle
common/src/androidTest/java/com/mvcoder/common/: ExampleInstrumentedTest.java
common/src/main/: AndroidManifest.xml
common/src/test/java/com/mvcoder/common/: ExampleUnitTest.java
ijkplayer-example/: build.gradle
ijkplayer-example/src/main/: AndroidManifest.xml
ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/activities/: VideoActivity.java
ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/application/: AppActivity.java  MediaApplication.java
ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/fragments/: SampleMediaListFragment.java
ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/widget/media/: IjkVideoView.java
ijkplayer-exo/: build.gradle
ijkplayer-java/: GSY.txt  build.gradle
ijkplayer-java/src/main/java/com/mvcoder/common/log/: ILogReport.java  Log.java
ijkplayer-java/src/main/java/com/mvcoder/common/utils/: ProcessUtil.java
ijkplayer-java/src/main/jni/: CMakeLists.txt
ijkplayer-java/src/main/jni/android-ndk-profiler-dummy/: CMakeLists.txt
ijkplayer-java/src/main/jni/ffmpeg/: CMakeLists.txt
ijkplayer-java/src/main/jni/ffmpeg/X86_64/include/libffmpeg/: config.h
ijkplayer-java/src/main/jni/ffmpeg/arm64-v8a/include/libffmpeg/: config.h
ijkplayer-java/src/main/jni/ffmpeg/armeabi-v7a/include/libffmpeg/: config.h
ijkplayer-java/src/main/jni/ffmpeg/armeabi/include/libffmpeg/: config.h
ijkplayer-java/src/main/jni/ffmpeg/x86/include/libffmpeg/: config.h
ijkplayer-java/src/main/jni/ijkj4a/: CMakeLists.txt
ijkplayer-java/src/main/jni/ijkplayer/: CMakeLists.txt  ff_ffplay.c  ff_ffplay.h  ff_ffplay_def.h  ijkplayer.c
ijkplayer-java/src/main/jni/ijkplayer/android/: ijkplayer_jni.c
ijkplayer-java/src/main/jni/ijkplayer/android/pipeline/: ffpipeline_android.c
ijkplayer-java/src/main/jni/ijksdl/: CMakeLists.txt
ijkplayer-java/src/main/jni/ijksdl/android/: ijksdl_android_jni.c  ijksdl_aout_android_audiotrack.c
ijkplayer-java/src/main/jni/ijksdl/log/: clog.c  clog.h
ijkplayer-java/src/main/jni/ijksoundtouch/: CMakeLists.txt
ijkplayer-java/src/main/jni/ijkyuv/: CMakeLists.txt
